fix: mathjax overflow-x auto

--- a/source/css/acanal.css
+++ b/source/css/acanal.css
@@ -156,7 +156,7 @@ body {
 }
 
 .MathJax_Display {
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 }
 
